--- a/binary-to-decimal/assets/css/style.css
+++ b/binary-to-decimal/assets/css/style.css
@@ -1,4 +1,4 @@
-/* css reset */
+/* reset */
 
 * {
   margin: 0;
@@ -141,7 +141,7 @@ input::-webkit-inner-spin-button {
   color: #ffffff;
 }
 
-/* icons */
+/* icon */
 
 #swap-icon {
   font-size: 30px;
@@ -150,7 +150,7 @@ input::-webkit-inner-spin-button {
   top: 16px;
 }
 
-/* animations */
+/* animation */
 
 @keyframes fade-in {
   0% { opacity: 0; }
