--- a/counter/assets/css/style.css
+++ b/counter/assets/css/style.css
@@ -4,7 +4,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
 }
 
 /* body */
@@ -71,6 +70,11 @@ body {
 }
 
 /* text */
+
+* {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+}
 
 #number, #button-less, #button-more {
   font-size: 50px;
