--- a/stopwatch/assets/css/style.css
+++ b/stopwatch/assets/css/style.css
@@ -65,7 +65,7 @@ body {
 }
 
 .button:hover {
-  color: #ffffff;
+  color: #fff;
 }
 
 #button-start:hover{
@@ -85,7 +85,7 @@ body {
 #display {
   font-family: "Roboto Mono", monospace;
   font-size: 45px;
-  color: #ffffff;
+  color: #fff;
 }
 
 /* icon */
