--- a/traffic-light/assets/css/style.css
+++ b/traffic-light/assets/css/style.css
@@ -72,16 +72,11 @@ body{
   color: #ffffff;
 }
 
-/* light */
+/* light on */
 
 .green-on {
   background-color: #60c904;
   box-shadow: 0px 0px 15px #60c904;
-}
-
-.green-off {
-  background-color: #006400;
-  box-shadow: none;
 }
 
 .yellow-on {
@@ -89,14 +84,21 @@ body{
   box-shadow: 0px 0px 15px #e5de00;
 }
 
-.yellow-off {
-  background-color: #cd8d00;
-  box-shadow: none;
-}
-
 .red-on {
   background-color: #ff2c2c;
   box-shadow: 0px 0px 15px #ff2c2c;
+}
+
+/* light off */
+
+.green-off {
+  background-color: #006400;
+  box-shadow: none;
+}
+
+.yellow-off {
+  background-color: #cd8d00;
+  box-shadow: none;
 }
 
 .red-off {
